Bug 1402461 - Improve user input detection for focus changes in Fennec r=jchen

Differential Revision: https://phabricator.services.mozilla.com/D94

MozReview-Commit-ID: 9VyoskwRrO1